--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "@solidjs/router": "^0.15.3",
+    "@types/uuid": "^10.0.0",
+    "solid-js": "^1.9.5",
+    "uuid": "^11.1.0"
   }
 }
