--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "uvicorn >= 0.34.2",
     "fastapi >= 0.115.12",
     "pydantic >= 2.11.4",
-    "pydantic-ai>=0.2.3",
+    "pydantic-ai-slim[openai,anthropic,groq,vertexai]>=0.2.3",
     "logfire[fastapi] >= 3.15.1",
 ]
 requires-python = ">=3.12"
