--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,27 @@ services:
       dockerfile: Dockerfile
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/connect4
     ports:
       - '8000:8000'
     restart: unless-stopped
-    # Uncomment and configure the following section when adding PostgreSQL
-    # environment:
-    #   - DATABASE_URL=postgresql://postgres:postgres@db:5432/connect4
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
 
-  # Uncomment the following section when adding PostgreSQL
-  # db:
-  #   image: postgres:15
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   environment:
-  #     - POSTGRES_PASSWORD=postgres
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_DB=connect4
-  #   ports:
-  #     - "5432:5432"
-  #   restart: unless-stopped
-# Uncomment the following section when adding PostgreSQL
-# volumes:
-#   postgres_data:
+  db:
+    image: postgres:17
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: connect4
+    ports:
+      # to connect: `pgcli postgres://postgres:postgres@localhost:54320/connect4`
+      - 54320:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d postgres']
+
+volumes:
+  postgres-data:
