--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic >= 2.11.4",
     "pydantic-ai-slim[openai,anthropic,groq,vertexai]>=0.2.3",
     "logfire[fastapi] >= 3.15.1",
+    "asyncpg>=0.30.0",
 ]
 requires-python = ">=3.12"
 authors = [
@@ -18,7 +19,7 @@ authors = [
 license = "MIT"
 
 [dependency-groups]
-dev = ["ruff >= 0.8.3", "pyright >= 1.1.397"]
+dev = ["ruff >= 0.8.3", "pyright >= 1.1.397", "asyncpg-stubs>=0.30.1"]
 
 [tool.pyright]
 typeCheckingMode = "strict"
