--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,11 @@ services:
         sync: false
       - key: LOGFIRE_TOKEN
         sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
+
+databases:
+  - name: postgres
+    plan: starter
