adding more env keys

--- a/render.yaml
+++ b/render.yaml
@@ -7,9 +7,15 @@ services:
     domains:
       - logfire.run
     envVars:
+      - key: LOGFIRE_TOKEN
+        sync: false
       - key: OPENAI_API_KEY
         sync: false
-      - key: LOGFIRE_TOKEN
+      - key: ANTHROPIC_API_KEY
+        sync: false
+      - key: GROQ_API_KEY
+        sync: false
+      - key: GROQ_API_KEY
         sync: false
       - key: DATABASE_URL
         fromDatabase:
