--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "fastapi >= 0.115.12",
     "pydantic >= 2.11.4",
     "pydantic-ai-slim[openai,anthropic,groq,vertexai]>=0.2.3",
-    "logfire[fastapi] >= 3.15.1",
+    "logfire[asyncpg,fastapi]>=3.15.1",
     "asyncpg>=0.30.0",
 ]
 requires-python = ">=3.12"
