--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       LOGFIRE_TOKEN: ${LOGFIRE_TOKEN}
+      C4AI_URL: http://c4ai:9000
       DATABASE_URL: postgresql://postgres:postgres@db:5432/connect4
     ports:
       - '8000:8000'
