--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,13 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Install dependencies
-        run: uv sync
+      - run: uv sync
 
       - uses: denoland/setup-deno@v2
         with:
           deno-version: v2.x
+
+      - run: deno install --allow-scripts
 
       - uses: pre-commit/action@v3.0.0
         with:
