--- a/c4ai/deno.json
+++ b/c4ai/deno.json
@@ -5,7 +5,7 @@
   },
   "nodeModulesDir": "auto",
   "imports": {
-    "@kenrick95/c4": "npm:@kenrick95/c4@5.1.0",
+    "@kenrick95/c4": "npm:@kenrick95/c4@^5.1.1",
     "logfire": "npm:logfire@^0.5.1",
     "zod": "npm:zod@^3.25.20"
   },
