--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       dockerfile: Dockerfile
     environment:
       LOGFIRE_TOKEN: ${LOGFIRE_TOKEN}
+      LOGFIRE_ENVIRONMENT: ${LOGFIRE_ENVIRONMENT}
+      LOGFIRE_SERVICE_NAME: c4ai
     ports:
       - '9000:9000'
     restart: unless-stopped
