--- a/c4ai/.zed/settings.json
+++ b/c4ai/.zed/settings.json
@@ -2,32 +2,20 @@
 //
 // For a full list of overridable settings, and general information on folder-specific settings,
 // see the documentation: https://zed.dev/docs/configuring-zed#settings-files
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run the `open default settings` command
-// from the command palette or from `Zed` application menu.
 {
-  "languages": {
-    "TypeScript": {
-      "language_servers": ["deno", "!typescript-language-server", "!vtsls", "!eslint"],
-      "formatter": "language_server"
-    },
-    "TSX": {
-      "language_servers": ["deno", "!typescript-language-server", "!vtsls", "!eslint"],
-      "formatter": "language_server"
+  "language_servers": ["biome", "typescript-language-server", "vtsls"],
+
+  "lsp": {
+    "biome": {
+      "settings": {
+        "config_path": "./biome.json",
+        "require_config_file": false
+      }
     }
   },
-  "lsp": {
-    "deno": {
-      "settings": {
-        "deno": {
-          "enable": true
-        }
-      }
+  "formatter": {
+    "language_server": {
+      "name": "biome"
     }
   }
 }
