--- a/c4ai/biome.json
+++ b/c4ai/biome.json
@@ -24,7 +24,9 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double"
+      "quoteStyle": "single",
+      "trailingCommas": "es5",
+      "semicolons": "asNeeded"
     }
   }
 }
