--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-web": "^0.49.0",
+    "@pydantic/logfire-browser": "^0.5.0",
     "@types/uuid": "^10.0.0",
     "solid-js": "^1.9.5",
     "uuid": "^11.1.0"
