--- a/.dockerignore
+++ b/.dockerignore
@@ -24,10 +24,12 @@ htmlcov/
 # Node.js
 node_modules/
 npm-debug.log
+pnpm-debug.log
 yarn-debug.log
 yarn-error.log
 .npm/
 .yarn/
+.pnpm-store/
 .pnp.*
 *.tsbuildinfo
 
