--- a/c4ai/Dockerfile
+++ b/c4ai/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:24.1.0-alpine
 
+RUN corepack enable && corepack prepare pnpm@10 --activate
+
 WORKDIR /app
 
-COPY /package.json .
-COPY /package-lock.json .
-COPY /main.ts .
-COPY /instrumentation.ts .
+COPY package.json pnpm-lock.yaml ./
+COPY main.ts instrumentation.ts ./
 
-RUN npm install
+RUN pnpm install --frozen-lockfile
 
-CMD ["npm", "start"]
+CMD ["pnpm", "start"]
