--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,16 @@ jobs:
 
       - run: uv sync
 
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
+          cache: 'pnpm'
 
-      - run: |
-          npm install
-          cd c4ai && npm install
+      - run: pnpm install
 
       - uses: pre-commit/action@v3.0.0
         with:
