--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
+    "@kobalte/core": "^0.13.9",
     "@opentelemetry/auto-instrumentations-web": "^0.49.0",
     "@pydantic/logfire-browser": "^0.5.0",
+    "@solidjs/router": "^0.15.3",
     "@types/uuid": "^10.0.0",
     "solid-js": "^1.9.5",
     "uuid": "^11.1.0"
