--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,37 @@ jobs:
 
       - run: uv sync
 
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
+          cache: 'pnpm'
 
-      - run: |
-          npm install
-          cd c4ai && npm install
+      - run: pnpm install
 
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --all-files --verbose
         env:
           SKIP: no-commit-to-branch
+
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: docker compose build
+
+  # https://github.com/marketplace/actions/alls-green#why used for branch protection checks
+  check:
+    if: always()
+    needs: [lint, docker-build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
