--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-ai-slim[openai,anthropic,groq,google]>=1.24.0",
     "logfire[asyncpg,fastapi,httpx]>=4.14.2",
     "asyncpg>=0.30.0",
+    "pydantic-evals>=1.24.0",
 ]
 requires-python = ">=3.12"
 authors = [
